--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,11 +52,10 @@ jobs:
       - name: Run Unit Tests & Generate Coverage
         run: |
           go test -v -short -coverprofile=coverage.out ./...
-
-      # 5. Analyse SonarCloud (Qualité globale)
-      # Mise à jour vers la v4 (version officielle recommandée)
+# 5. Analyse SonarCloud (Qualité globale)
       - name: SonarCloud Scan
-        uses: SonarSource/sonarqube-scan-action@v4
+        # ✅ Utilise la version v5.0.0 ou plus récente (v6 n'est parfois pas encore stable partout, v5 est sûre)
+        uses: SonarSource/sonarqube-scan-action@v5.0.0 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
