fix: correct nats service options syntax

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,9 @@ jobs:
       nats:
         image: nats:2.10-alpine
         ports: ["4222:4222"]
-        options: --entrypoint /usr/local/bin/nats-server -- -js # Active JetStream
+        # ✅ Correction de la syntaxe ici
+        options: >-
+          --name nats-server
 
     steps:
       - uses: actions/checkout@v4
